--- a/UnityLauncherPro/Resources/Colors.xaml
+++ b/UnityLauncherPro/Resources/Colors.xaml
@@ -1,13 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:UnityLauncherPro">
-	<SolidColorBrush x:Key="ThemeDarkestBackground" Color="#FF121212"/>
-	<SolidColorBrush x:Key="ThemeDarkMenuBar" Color="#FF0C0C0C"/>
-	<SolidColorBrush x:Key="ThemeMainBackgroundColor" Color="#FF262626"/>
-	<SolidColorBrush x:Key="ThemeTextBoxBackground" Color="#FF333337"/>
-	<SolidColorBrush x:Key="ThemeButtonBackground" Color="#FF3F3F46"/>
-	<SolidColorBrush x:Key="ThemeButtonForeground" Color="#FFC1C1C1"/>
-	<SolidColorBrush x:Key="ThemeDeactiveTabForeground" Color="#FFC1C1C1"/>
+    <SolidColorBrush x:Key="ThemeDarkestBackground" Color="#FF121212"/>
+    <SolidColorBrush x:Key="ThemeDarkMenuBar" Color="#FF0C0C0C"/>
+    <SolidColorBrush x:Key="ThemeMainBackgroundColor" Color="#FF262626"/>
+    <SolidColorBrush x:Key="ThemeTextBoxBackground" Color="#FF333337"/>
+    <SolidColorBrush x:Key="ThemeButtonBackground" Color="#FF3F3F46"/>
+    <SolidColorBrush x:Key="ThemeButtonForeground" Color="#FFC1C1C1"/>
+    <SolidColorBrush x:Key="ThemeDeactiveTabForeground" Color="#FFC1C1C1"/>
     <SolidColorBrush x:Key="ThemeDeactiveTabBackground" Color="#FF1D1D1D"/>
     <SolidColorBrush x:Key="ThemeDatagridHeaderBackground" Color="#4C3F3F46"/>
     <SolidColorBrush x:Key="ThemeDatagridHeaderForeground" Color="#FFB6B6B6"/>
@@ -20,32 +20,36 @@
     <SolidColorBrush x:Key="ThemeScrollBarBackground" Color="#FF151515"/>
     <SolidColorBrush x:Key="ThemeScrollBarFill" Color="#FF47474B"/>
 
-	<!--custom components-->
-	<SolidColorBrush x:Key="ThemeButtonForegroundDisabled" Color="#FF707070"/>
-	<SolidColorBrush x:Key="ThemeButtonBackgroundMouseOver" Color="#FF494949"/>
-	<SolidColorBrush x:Key="ThemeButtonWhiteText" Color="#FFFFFFFF"/>
-	<SolidColorBrush x:Key="ThemeButtonBackgroundPressed" Color="#FF0F0F0F"/>
-	<SolidColorBrush x:Key="ThemeMainTitle" Color="#FFB8B8B8"/>
-	<SolidColorBrush x:Key="ThemeScrollBarEnabledForeground" Color="#FF000000"/>
+    <!--custom components-->
+    <SolidColorBrush x:Key="ThemeButtonForegroundDisabled" Color="#FF707070"/>
+    <SolidColorBrush x:Key="ThemeButtonBackgroundMouseOver" Color="#FF494949"/>
+    <SolidColorBrush x:Key="ThemeButtonWhiteText" Color="#FFFFFFFF"/>
+    <SolidColorBrush x:Key="ThemeButtonBackgroundPressed" Color="#FF0F0F0F"/>
+    <SolidColorBrush x:Key="ThemeMainTitle" Color="#FFB8B8B8"/>
+    <SolidColorBrush x:Key="ThemeScrollBarEnabledForeground" Color="#FF000000"/>
 
-	<!--search-->
-	<SolidColorBrush x:Key="ThemeSearchPlaceholder" Color="#7F919191"/>
-	<SolidColorBrush x:Key="ThemeSearchClose" Color="#A3C1C1C1"/>
-	<SolidColorBrush x:Key="ThemeSearchCaret" Color="#FFE2E2E2"/>
-	<SolidColorBrush x:Key="ThemeSearchForeground" Color="#FFC7C7C7"/>
-	<SolidColorBrush x:Key="ThemeSearchSelection" Color="#FF003966"/>
+    <!--search-->
+    <SolidColorBrush x:Key="ThemeSearchPlaceholder" Color="#7F919191"/>
+    <SolidColorBrush x:Key="ThemeSearchClose" Color="#A3C1C1C1"/>
+    <SolidColorBrush x:Key="ThemeSearchCaret" Color="#FFE2E2E2"/>
+    <SolidColorBrush x:Key="ThemeSearchForeground" Color="#FFC7C7C7"/>
+    <SolidColorBrush x:Key="ThemeSearchSelection" Color="#FF003966"/>
 
-	<!--window-->
-	<SolidColorBrush x:Key="ThemeWindowMinClose" Color="#FFC3C3C3"/>
-	
-	<!--grids-->
-	<SolidColorBrush x:Key="ThemeGridForeground" Color="#FFD8D8D8"/>
-	<SolidColorBrush x:Key="ThemeGridHorizontalGridLines" Color="#4C000000"/>
-	<SolidColorBrush x:Key="ThemeGridVerticalGridLines" Color="#19000000"/>
-	<SolidColorBrush x:Key="ThemeGridGreenText" Color="#FF00C500"/>
-	<SolidColorBrush x:Key="ThemeGridRedText" Color="#FFF54F4F"/>
+    <!--window-->
+    <SolidColorBrush x:Key="ThemeWindowMinClose" Color="#FFC3C3C3"/>
 
-	<!--statusbar-->
-	<SolidColorBrush x:Key="ThemeStatusText" Color="#FF595959"/>
-    
+    <!--grids-->
+    <SolidColorBrush x:Key="ThemeGridForeground" Color="#FFD8D8D8"/>
+    <SolidColorBrush x:Key="ThemeGridHorizontalGridLines" Color="#4C000000"/>
+    <SolidColorBrush x:Key="ThemeGridVerticalGridLines" Color="#19000000"/>
+    <SolidColorBrush x:Key="ThemeGridGreenText" Color="#FF00C500"/>
+    <SolidColorBrush x:Key="ThemeGridRedText" Color="#FFF54F4F"/>
+
+    <!--statusbar-->
+    <SolidColorBrush x:Key="ThemeStatusText" Color="#FF595959"/>
+
+    <!--platform selection combobox-->
+    <SolidColorBrush x:Key="ThemeDropDownBorderBorderBrush" Color="#FF171717"/>
+    <SolidColorBrush x:Key="ThemeDropDownBorderBackground" Color="#FF2E2E34"/>
+
 </ResourceDictionary>
