--- a/UnityLauncherPro/Resources/Colors.xaml
+++ b/UnityLauncherPro/Resources/Colors.xaml
@@ -27,7 +27,7 @@
     <SolidColorBrush x:Key="ThemeButtonBackgroundPressed" Color="#FF0F0F0F"/>
     <SolidColorBrush x:Key="ThemeMainTitle" Color="#FFB8B8B8"/>
     <SolidColorBrush x:Key="ThemeScrollBarEnabledForeground" Color="#FF000000"/>
-
+    
     <!--search-->
     <SolidColorBrush x:Key="ThemeSearchPlaceholder" Color="#7F919191"/>
     <SolidColorBrush x:Key="ThemeSearchClose" Color="#A3C1C1C1"/>
@@ -51,5 +51,9 @@
     <!--platform selection combobox-->
     <SolidColorBrush x:Key="ThemeDropDownBorderBorderBrush" Color="#FF171717"/>
     <SolidColorBrush x:Key="ThemeDropDownBorderBackground" Color="#FF2E2E34"/>
+    
+    <!--focused button outline-->
+    <SolidColorBrush x:Key="ThemeButtonFocusOutline" Color="#FF003D61"/>
+
 
 </ResourceDictionary>
